--- a/mobile_version.html
+++ b/mobile_version.html
@@ -60,8 +60,8 @@
             bottom: 80px;
             left: 50%;
             transform: translateX(-50%);
-            width: 80px; /* Увеличиваем размер */
-            height: 80px; /* Увеличиваем размер */
+            width: 100px; /* Еще больше увеличиваем */
+            height: 100px; /* Еще больше увеличиваем */
             z-index: 10;
             transition: left 0.3s ease;
         }
