--- a/mobile_version.html
+++ b/mobile_version.html
@@ -785,8 +785,7 @@
         const trackPhrases = [
             // Мгновенный старт - фразы появляются сразу
             { text: "🎵 Трек начинается", timing: 0, type: "intro", order: 0 },
-            { text: "КАЖЕТСЯ", timing: 1, type: "intro", order: 0 },
-            { text: "HABBA", timing: 1.5, type: "intro", order: 0 },
+            { text: "HABBA - КАЖЕТСЯ", timing: 1, type: "intro", order: 0 },
             
             // Припев 1 (3 сек)  
             { text: "Кажется", timing: 2, type: "chorus", order: 1 },
@@ -1242,7 +1241,7 @@
             // Случайная позиция по X с учетом границ
             const container = document.getElementById('gameContainer');
             const containerWidth = container.offsetWidth || window.innerWidth;
-            const maxLeft = Math.max(10, containerWidth - 60); // отступ 10px, ширина монетки 50px
+            const maxLeft = Math.max(50, containerWidth - 110); // отступ 50px, ширина идеи 50px + запас
             const randomX = Math.random() * maxLeft;
             coin.style.left = randomX + 'px';
             
